--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.10",
     "eslint-config-next": "13.1.1",
     "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-testing-library": "^5.9.1",
     "jest-environment-jsdom": "^29.3.1",
     "next": "13.1.1",
     "react": "18.2.0",
